js/js.translator/testData/incremental/invalidation/functionDefaultParams/lib1/l1.1.kt
fun foo(x: Int = 88) = 42 + x
